--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,9 +4,19 @@
 		{
 			"type": "func",
 			"command": "host start",
-			"problemMatcher": "$func-watch",
+			"problemMatcher": "$func-node-watch",
 			"isBackground": true,
+			"dependsOn": "npm build",
+			"options": {
+				"cwd": "${workspaceFolder}/api"
+			}
+		},
+		{
+			"type": "shell",
+			"label": "npm build",
+			"command": "npm run build",
 			"dependsOn": "npm install",
+			"problemMatcher": "$tsc",
 			"options": {
 				"cwd": "${workspaceFolder}/api"
 			}
@@ -23,6 +33,7 @@
 			"type": "shell",
 			"label": "npm prune",
 			"command": "npm prune --production",
+			"dependsOn": "npm build",
 			"problemMatcher": [],
 			"options": {
 				"cwd": "${workspaceFolder}/api"
