--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,5 +1,21 @@
 {
   "recommendations": [
-    "ms-azuretools.vscode-azurefunctions"
+    "ms-azuretools.vscode-azurefunctions",
+    "dbaeumer.vscode-eslint",
+		"angular.ng-template",
+		"ms-azuretools.vscode-azurefunctions",
+		"johnpapa.angular-essentials",
+		"ms-vscode.vscode-typescript-next",
+		"stringham.move-ts",
+		"visualstudioexptteam.vscodeintellicode",
+		"ms-azuretools.vscode-docker",
+		"ms-vsliveshare.vsliveshare",
+		"ms-vscode.azure-account",
+		"ms-vscode.vscode-typescript-tslint-plugin",
+		"ms-azuretools.vscode-azureappservice",
+		"ms-azuretools.vscode-azurestorage",
+		"ms-vscode.azurecli",
+		"ms-azuretools.vscode-logicapps",
+		"ms-vscode.vscode-node-azure-pack"
   ]
 }
