--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -25,7 +25,9 @@
     "titleBar.activeBackground": "#007fff",
     "titleBar.activeForeground": "#e7e7e7",
     "titleBar.inactiveBackground": "#007fff99",
-    "titleBar.inactiveForeground": "#e7e7e799"
+    "titleBar.inactiveForeground": "#e7e7e799",
+    "statusBar.background": "#007fff",
+    "statusBar.foreground": "#e7e7e7"
   },
   "peacock.color": "#007fff"
 }
