--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,6 +2,20 @@
   "version": "0.2.0",
   "configurations": [
     {
+      "name": "Attach to Chrome",
+      "port": 9222,
+      "request": "attach",
+      "type": "pwa-chrome",
+      "webRoot": "${workspaceFolder}"
+    },
+  {
+    "name": "Launch Chrome",
+    "request": "launch",
+    "type": "pwa-chrome",
+    "url": "http://localhost:4200",
+    "webRoot": "${workspaceFolder}"
+  },
+    {
       "name": "Attach to Node Functions",
       "type": "node",
       "request": "attach",
