feat(vision):add face mask and celebrity recognition

--- a/angular-app/package.json
+++ b/angular-app/package.json
@@ -18,6 +18,9 @@
     "@angular/platform-browser": "^11.2.2",
     "@angular/platform-browser-dynamic": "^11.2.2",
     "@angular/router": "^11.2.2",
+    "@azure/arm-cognitiveservices": "^5.2.0",
+    "@azure/ms-rest-js": "^2.5.0",
+    "@azure/ms-rest-nodeauth": "^3.0.10",
     "@ngrx/data": "^11.0.1",
     "@ngrx/effects": "^11.0.1",
     "@ngrx/entity": "^11.0.1",
