--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -5,7 +5,6 @@
     "angular.ng-template",
     "johnpapa.angular-essentials",
     "ms-vscode.vscode-typescript-next",
-    "stringham.move-ts",
     "visualstudioexptteam.vscodeintellicode",
     "ms-azuretools.vscode-docker",
     "ms-vsliveshare.vsliveshare",
@@ -15,6 +14,7 @@
     "ms-azuretools.vscode-azurestorage",
     "ms-vscode.azurecli",
     "ms-azuretools.vscode-logicapps",
-    "ms-vscode.vscode-node-azure-pack"
+    "ms-vscode.vscode-node-azure-pack",
+    "ms-azuretools.vscode-azurestaticwebapps"
   ]
 }
